--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
   <body>
 
     <header>
+
       <div class="header-top">
+        <div class="header-top-left">blabla
+
+        </div>
+        <div class="header-top-right">blabla
+
+        </div>
 
       </div>
       <div class="header-bottom">
