--- a/index.html
+++ b/index.html
@@ -7,23 +7,32 @@
   </head>
   <body>
 
+
+        <!-- CAMBIARE CLASS IN ID -->
     <header>
 
       <div class="header-top">
-        <div class="header-top-left">blabla
-
+        <div class="header-top-left">
+          o english > | contact us
         </div>
-        <div class="header-top-right">blabla
-
+        <div class="header-top-right">
+          cerca log In   getHubspotFree
         </div>
 
       </div>
       <div class="header-bottom">
+        <div class="header-bottom-left">
+          <img src="img/Logo.png" alt="logo">
+        </div>
+        <div class="header-bottom-right">
+          software pricing recource partners about
+        </div>
 
       </div>
       <div class="header-main">
         <div class="header-background">
-
+          <h1>There's a better way to grow</h1>
+          <p>bla bla</p>
         </div>
 
       </div>
@@ -33,24 +42,33 @@
 
     <main>
       <div class="container1">
-        <div class="block">
 
-        </div>
-        <div class="block">
+        <div class="container1-top">
+          <div class="block-top">
+            bla bla
 
-        </div>
-        <div class="block">
+          </div>
+          <div class="block-top">
+            bla bla
 
+          </div>
         </div>
-        <div class="block">
 
-        </div>
-        <div class="block">
+        <div class="container1-bottom">
+          <div class="block-bottom">
+            BLA BLA
 
-        </div>
-        <div class="block">
+          </div>
+          <div class="block-bottom">
+            BLA BLA
 
+          </div>
+          <div class="block-bottom">
+            BLA BLA
+
+          </div>
         </div>
+
 
       </div>
 
