--- a/index.html
+++ b/index.html
@@ -2,92 +2,55 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="index.css">
     <title></title>
   </head>
   <body>
 
-
-        <!-- CAMBIARE CLASS IN ID -->
     <header>
+      <div id="header-top">
+        <div class="margin-20">
+          <div id="header-top-left">
+            <ul class="list-clear">
+              <li class="list-details"><a class="link-details" href="#"><i class="fas fa-globe-europe"></i></a></li>
+              <li class="list-details"><a class="link-details" href="#">English<i id="icon-arrowdown" class="fas fa-chevron-down"></i></a></li>
+              <li class="list-details"><a class="link-details" href="#">Contact Us</a></li>
+            </ul>
+          </div>
+          <div id="header-top-right">
+            <ul class="list-clear">
+              <li class="list-details"><a class="link-details" href="#"><i class="fas fa-search"></i></a></li>
+              <li class="list-details"><a class="link-details" href="#">log In</a></li>
+              <li class="list-details"><a class="link-details" href="#">GetHubspotFree</a></li>
+            </ul>
+          </div>
+        </div>
 
-      <div class="header-top">
-        <div class="header-top-left">
-          o english > | contact us
         </div>
-        <div class="header-top-right">
-          cerca log In   getHubspotFree
-        </div>
+      <div id="header-bottom">
 
       </div>
-      <div class="header-bottom">
-        <div class="header-bottom-left">
-          <img src="img/Logo.png" alt="logo">
-        </div>
-        <div class="header-bottom-right">
-          software pricing recource partners about
-        </div>
-
-      </div>
-      <div class="header-main">
-        <div class="header-background">
-          <h1>There's a better way to grow</h1>
-          <p>bla bla</p>
-        </div>
+      <div id="header-background">
 
       </div>
 
     </header>
 
 
+
+
+
+
     <main>
-      <div class="container1">
-
-        <div class="container1-top">
-          <div class="block-top">
-            bla bla
-
-          </div>
-          <div class="block-top">
-            bla bla
-
-          </div>
-        </div>
-
-        <div class="container1-bottom">
-          <div class="block-bottom">
-            BLA BLA
-
-          </div>
-          <div class="block-bottom">
-            BLA BLA
-
-          </div>
-          <div class="block-bottom">
-            BLA BLA
-
-          </div>
-        </div>
-
+      <div id="main-top">
 
       </div>
-
-      <div class="container2celeste">
-        <p></p>
-        <ol>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-        </ol>
+      <div id="main-mid">
 
       </div>
-
-      <div class="container3bianco">
+      <div id="main-bottom">
 
       </div>
 
@@ -97,17 +60,13 @@
 
 
 
+
     <footer>
-      <ol>
-        <li></li>
-      </ol>
+      <div id="footer-background">
+
+      </div>
 
     </footer>
-
-
-
-
-
 
 
 
