progetto (main 1/3 completato)

--- a/index.html
+++ b/index.html
@@ -66,17 +66,88 @@
     </header>
 
 
-
-
-
-
     <main>
-      <div id="main-top">
 
+      <div id="main-top">
+        <div class="margin-20">
+          <div id="main-top-up">
+
+            <div id="up-top-container" class="main-top-up-container">
+              <img id="icon-cube" src="img/integrations.png" alt="cube">
+              <h2>Powerfull Alone. Better Together</h2>
+              <p id="main-top-up-text">HubSpot offers a full stack of marketing, sales and customer service, with a completely free CRM at its core. They’re powerful alone - but even better when used together.</p>
+            </div>
+            <div id="up-down-container" class="main-top-up-container">
+              <section id="up-down-container-left">
+                <img id="icon-book" src="img/icon1.png" alt="book">
+                <a id="up-down-container-left-button" class="button-orange" href="#">Learn More</a>
+              </section>
+              <section id="up-down-container-right">
+                <h3>Free Hubspot CRM</h3>
+                <p>Everything you need to organize, track, and build better relationship with leads and customer. Yes it's 100% free. Forever.</p>
+                <h4 id="up-down-container-right-text">POPOLAR FEATURE</h4><div id="lane"></div>
+                <ul class="list-clear">
+                  <li class="list-details"><i class="fas fa-check-circle link-details circle-button"></i>Contact Insight</li>
+                  <li class="list-details"><i class="fas fa-check-circle link-details circle-button"></i>Deals</li>
+                  <li class="list-details"><i class="fas fa-check-circle link-details circle-button"></i>Task</li>
+                </ul>
+              </section>
+            </div>
+
+          </div>
+
+          <div id="main-top-down clearfix">
+
+            <div id="down-left" class="main-top-down-container">
+              <img class="icon-top-down" src="img/icon2.png" alt="box">
+              <h3>Marketing Hub</h3>
+              <p>Marketing software to help u grow traffic, convert more visitors and run complete inbound marketing compaigns at scale.</p>
+              <hr class="lane-separator">
+              <h4>POPOLAR FEATURE</h4>
+              <ul class="list-clear main-top-down-list">
+                <li><a class="link-details" href="#"></a><i class="fas fa-check-circle link-details circle-button"></i>Lead generation</li>
+                <li><a class="link-details" href="#"><i class="fas fa-check-circle link-details circle-button"></i>Marketing Automation</a></li>
+                <li><a class="link-details" href="#"></a><i class="fas fa-check-circle link-details circle-button"></i>Analytics</li>
+              </ul>
+              <a class="button-orange main-top-down-button" href="#">Learn More</a>
+            </div>
+
+            <div id="down-mid" class="main-top-down-container">
+              <img class="icon-top-down" src="img/icon3.png" alt="briefcase">
+              <h3>Hub Sales</h3>
+              <p>Time-saving sales software that help you get deeper insights into prospects, automate the tasks you hate, and close more deals faster.</p>
+              <hr class="lane-separator">
+              <h4>POPOLAR FEATURE</h4>
+              <ul class="list-clear main-top-down-list">
+                <li><a class="link-details" href="#"></a><i class="fas fa-check-circle link-details circle-button"></i>Email Tracking</li>
+                <li><a class="link-details" href="#"><i class="fas fa-check-circle link-details circle-button"></i>Meeting Scheduling</a></li>
+                <li><a class="link-details" href="#"></a><i class="fas fa-check-circle link-details circle-button"></i>Email Automation</li>
+              </ul>
+              <a class="button-orange main-top-down-button" href="#">Learn More</a>
+            </div>
+
+            <div id="down-right" class="main-top-down-container">
+              <img class="icon-top-down" src="img/icon4.png" alt="table">
+              <h3>Service Hub</h3>
+              <p>Customer service software to help you connect with customers, and turn them into promoters that grow your business.</p>
+              <hr class="lane-separator">
+              <h4>POPOLAR FEATURE</h4>
+              <ul class="list-clear main-top-down-list">
+                <li><a class="link-details" href="#"></a><i class="fas fa-check-circle link-details circle-button"></i>Ticket</li>
+                <li><a class="link-details" href="#"><i class="fas fa-check-circle link-details circle-button"></i>Customer Feedback</a></li>
+                <li><a class="link-details" href="#"></a><i class="fas fa-check-circle link-details circle-button"></i>Knowledge Base</li>
+              </ul>
+              <a class="button-orange main-top-down-button" href="#">Learn More</a>
+            </div>
+
+          </div>
+        </div>
       </div>
+
       <div id="main-mid">
 
       </div>
+
       <div id="main-bottom">
 
       </div>
