progetto (main 2/3 completato)

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
-    <title></title>
+    <title>Hubspot</title>
   </head>
   <body>
 
@@ -96,7 +96,7 @@
 
           </div>
 
-          <div id="main-top-down clearfix">
+          <div id="main-top-down" class="clearfix">
 
             <div id="down-left" class="main-top-down-container">
               <img class="icon-top-down" src="img/icon2.png" alt="box">
@@ -145,7 +145,64 @@
       </div>
 
       <div id="main-mid">
+        <div class="margin-20">
 
+          <div id="main-mid-top">
+            <h2 id="main-mid-top-text">Learn and grow with award-winning support and a thriving community behind you.</h2>
+            <p>You don't have to go it alone. Master the inbound methodology and get the most out of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pros just like you.</p>
+          </div>
+
+          <div id="main-mid-bottom">
+            <div>
+              <ul class="list-clear">
+                <li class="main-mid-list-details list-border list-border2">
+                  <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_agency.svg" alt="hands">
+                  <h2>150 +</h2>
+                  <p>HubSpot user groups</p>
+                </li>
+                <li class="main-mid-list-details list-border list-border2">
+                  <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_blog.svg" alt="hubspot">
+                  <h2>4.5M +</h2>
+                  <p>montly visit</p>
+                </li>
+                <li class="main-mid-list-details list-border list-border2">
+                  <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_academy.svg" alt="academy">
+                  <h2>155K +</h2>
+                  <p>certified professionals</p>
+                </li>
+                <li class="main-mid-list-details list-border">
+                <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_inbound.svg" alt="inbound">
+                <h2>21K +</h2>
+                <p>registered attendees</p>
+                </li>
+              </ul>
+            </div>
+            <div>
+              <ul class="list-clear">
+                <li class="main-mid-list-details list-border2">
+                  <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_blog.svg" alt="hubspotmarketplace">
+                  <h2>200 +</h2>
+                  <p>integrations</p>
+                </li>
+                <li class="main-mid-list-details list-border2">
+                  <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_globe.svg" alt="world">
+                  <h2>6 +</h2>
+                  <p>languages</p>
+                </li>
+                <li class="main-mid-list-details list-border2">
+                  <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_followers.svg" alt="message">
+                  <h2>2.6M +</h2>
+                  <p>social followers</p>
+                </li>
+                <li class="main-mid-list-details">
+                <img src="https://cdn2.hubspot.net/hubfs/53/Lists.svg" alt="people">
+                <h2>5K +</h2>
+                <p>profiles and counting</p>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </div>
 
       <div id="main-bottom">
