--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
 
     <header>
+
       <div id="header-top" class="clearfix">
         <div class="margin-20">
           <div id="header-top-left">
@@ -65,11 +66,11 @@
 
     </header>
 
-
     <main>
 
       <div id="main-top">
         <div class="margin-20">
+
           <div id="main-top-up">
 
             <div id="up-top-container" class="main-top-up-container">
@@ -145,6 +146,7 @@
       </div>
 
       <div id="main-mid">
+
         <div class="margin-20">
 
           <div id="main-mid-top">
@@ -207,24 +209,115 @@
 
       <div id="main-bottom">
 
+        <div class="margin-20">
+
+          <div id="main-bottom-up">
+            <div id="main-bottom-up-left">
+              <h2 id="main-bottom-up-text">64,500</h2>
+              <p>customers in over <strong>100</strong><br>
+                countries growing their<br>
+                businesses with HubSpot</p>
+            </div>
+            <div id="main-bottom-up-right">
+              <div>
+                <ul class="list-clear">
+                  <li id="atlassian" class="list-details brand"></li>
+                  <li id="doordash" class="list-details brand"></li>
+                  <li id="crowd" class="list-details brand"></li>
+                  <li id="purple" class="list-details brand"></li>
+                </ul>
+              </div>
+              <div>
+                <ul class="list-clear">
+                  <li id="subaru" class="list-details brand"></li>
+                  <li id="wistia" class="list-details brand"></li>
+                  <li id="classpass" class="list-details brand"></li>
+                  <li id="vmware" class="list-details brand"></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
+          <div id="main-bottom-down">
+
+            <div id="main-bottom-down-left">
+              <h2 id="main-bottom-down-text">Start Growing With HubSpot Today</h2>
+              <p>With tools to make every part of your process more human and a support team excited to help you, getting started with inbound has never been easier.</p>
+              <a id="main-bottom-down-button" class="button-orange" href="#">GetHubspotFree</a>
+              <p id="main-bottom-donw-textsmall">Get started with FREE tools, or get more with our premium software.</p>
+            </div>
+
+            <div id="main-bottom-down-right">
+              <img id="icon-woman" src="img/woman.webp" alt="woman">
+            </div>
+          </div>
+        </div>
       </div>
 
     </main>
 
-
-
-
-
-
     <footer>
-      <div id="footer-background">
 
+      <div class="margin-20">
+
+        <div id="footer-top">
+          <ul class="list-clear footer-list">
+            <li class="list-title"><strong>Incresae Your Traffic</strong></li>
+            <li>Ad Software</li>
+            <li>Blog Software</li>
+            <li>SEO Software</li>
+            <li>Social Media Software</li>
+            <li>Content Management System</li>
+          </ul>
+          <ul class="list-clear footer-list">
+            <li class="list-title"><strong>Connect With Leads</strong></li>
+            <li>Find New Prospect</li>
+            <li>Email Treacking</li>
+            <li>Sales Email Templates</li>
+            <li>Click to Call Your Leads</li>
+            <li>Email Marketing</li>
+          </ul>
+          <ul class="list-clear footer-list">
+            <li class="list-title"><strong>Close and Manage Leads</strong></li>
+            <li>Document Tracking Tool</li>
+            <li>Meeting Schedule Tool</li>
+            <li>Sales Automation Tool</li>
+            <li>Lead Management Tool</li>
+            <li>Pipeline Management Tool</li>
+          </ul>
+          <ul class="list-clear footer-list">
+            <li class="list-title"><strong>Support and Tools</strong></li>
+            <li>HubSpot Partners</li>
+            <li>Join a Local User Group</li>
+            <li>Get a Free Website Report</li>
+            <li>HubSpot Templates</li>
+            <li>Free Tools & Generator</li>
+            <li id="footer-button">Contact HubSpotSupport</li>
+            <li><i class="fab fa-facebook-f icon-footer"></i>
+                <i class="fab fa-instagram icon-footer"></i>
+                <i class="fab fa-youtube icon-footer"></i>
+                <i class="fab fa-twitter icon-footer"></i>
+                <i class="fab fa-linkedin-in icon-footer"></i></li>
+          </ul>
+        </div>
+
+        <div id="footer-bottom">
+          <div id="footer-languages">
+            <p>English Deutsch 日本語 Espa&ntilde;ol Portugu&ecirc;s Fran&ccedil;ais</p>
+          </div>
+          <div id="footer-copyright clearfix">
+            <div id="footer-copyright-left">
+              <img src="https://www.hubspot.com/hubfs/WBZ-1165%20Global%20Nav%20Redesign/Wordmark-White.svg" alt="logo">
+              <p>Copyright &copy; 2019 HubSpot, Inc.</p>
+
+            </div>
+            <div id="footer-copyright-right">
+              <p>Legal Stuff Privacy Policy</p>
+            </div>
+          </div>
+        </div>
       </div>
 
     </footer>
-
-
-
-
   </body>
 </html>
