Progetto Completo (corretto)

--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
           <div id="footer-languages">
             <p>English Deutsch 日本語 Espa&ntilde;ol Portugu&ecirc;s Fran&ccedil;ais</p>
           </div>
-          <div id="footer-copyright clearfix">
+          <div id="footer-copyright" class="clearfix">
             <div id="footer-copyright-left">
               <img src="https://www.hubspot.com/hubfs/WBZ-1165%20Global%20Nav%20Redesign/Wordmark-White.svg" alt="logo">
               <p>Copyright &copy; 2019 HubSpot, Inc.</p>
